--- a/youbor/assets/sass/main.sass
+++ b/youbor/assets/sass/main.sass
@@ -41,7 +41,12 @@
 
 .main
 	margin-top: 70px
-	padding-top: 30px
+
+	+r(767)
+		margin-top: 120px
+
+	+r(480)
+		margin-top: 90px
 
 	&--index
 		padding-top: 0
@@ -886,6 +891,7 @@
 //-------------------------faq----------------------
 .faq
 	padding-bottom: 60px
+	padding-top: 30px
 
 	+r(767)
 		padding-bottom: 30px
@@ -1103,6 +1109,186 @@
 
 		+r(480)
 			grid-template-columns: 1fr
+
+//-----------------------Blog---------------
+.blog
+	padding-top: 30px
+	padding-bottom: 60px
+
+	+r(992)
+		padding-bottom: 30px
+
+
+	&__title
+		color: $dark
+		margin-bottom: 45px
+
+		+r(1200)
+			margin-bottom: 20px
+
+	&__wrap
+		display: grid
+		grid-template-columns: 1fr 1fr 1fr
+		column-gap: 20px
+		row-gap: 50px
+		margin-bottom: 50px
+
+		+r(992)
+			grid-template-columns: 1fr 1fr
+			margin-bottom: 30px
+
+		+r(576)
+			grid-template-columns: 1fr
+
+	&__item
+		display: flex
+		flex-direction: column
+
+		&_date
+			display: flex
+			gap: 10px
+			margin-bottom: 12px
+			color: $dark
+			font-weight: 700
+
+			+r(576)
+				margin-bottom: 5px
+
+		&_img
+			margin-bottom: 20px
+
+			img
+				object-fit: cover
+				width: 100%
+				height: 100%
+
+		&_title
+			color: $dark
+			font-weight: 700
+			margin-bottom: 20px
+
+			+r(1200)
+				margin-bottom: 15px
+
+			h3
+				font-size: 24px
+
+				+r(992)
+					font-size: 18px
+
+			&:hover
+				text-decoration: underline
+
+		&_desc
+			color: $text
+
+	&__btn
+		margin: 0 auto
+
+//----------------------Article----------
+.article
+	padding: 50px 0
+
+	+r(992)
+		padding: 30px
+
+	&__container
+		display: grid
+		padding: 0 15px
+		grid-template-columns: 120px 1fr
+		gap: 90px
+		max-width: 1000px
+		margin: 0 auto
+
+		+r(1200)
+			gap: 50px
+
+		+r(992)
+			grid-template-columns: 1fr
+			gap: 30px
+
+	&__bread
+		padding-top: 10px
+
+	&__link
+		display: flex
+		align-items: center
+		gap: 5px
+		text-transform: uppercase
+		color: $accent2
+		font-weight: 700
+
+		+r(1200)
+			font-size: 14px
+
+		&:hover
+			cursor: pointer
+			color: $accent
+		
+		span
+			display: block
+			width: 0
+			height: 0
+			border-width: 3px 6px 3px 0
+			border-color: transparent $accent2 transparent transparent
+			border-style: solid
+
+	&__title, h3
+		@extend .h3
+		color: $dark
+		margin-bottom: 40px
+		line-height: 35px
+
+		+r(992)
+			margin-bottom: 20px
+
+		+r(576)
+			font-size: 20px
+
+	&__img,
+	.wp-block-image
+		float: left
+		margin: 10px
+		margin-left: 0
+		margin-top: 0
+		max-width: 385px
+		max-height: 255px
+		width: 100%
+		border-radius: 5px
+		overflow: hidden
+
+		+r(992)
+			float: none
+			max-width: 100%
+			margin: 0
+			margin-bottom: 20px
+			height: 
+
+		img
+			object-fit: cover
+			width: 100%
+			height: 100%
+
+	p
+		margin-bottom: 10px
+
+	blockquote
+		@extend .h3
+		color: $dark
+		max-width: 525px
+		margin: 0 auto
+		margin-top: 30px
+		margin-bottom: 40px
+
+		+r(576)
+			max-width: 400px
+			font-size: 20px
+
+		+r(480)
+			max-width: 300px
+			margin-top: 15px
+			margin-bottom: 25px
+
 
 // -----MODAL-----
 .modal
@@ -1637,3 +1823,38 @@
 
 	strong
 		color: $dark
+
+.error404
+	// min-height: calc(100vh - 114px)
+	padding-top: 120px
+	display: flex
+	align-items: center
+	justify-content: center
+
+	&__description
+		display: flex
+		flex-direction: column
+		align-items: center
+		justify-content: center
+
+
+	&__title
+		text-align: center
+		margin-bottom: 50px
+		font-size: 40px
+		font-weight: 700
+		color: $dark
+
+	&__btn
+
+		a
+			color: $accent
+			background: none
+			font-weight: 700
+			border-bottom: 1px solid $accent
+			padding-bottom: 5px
+
+			&:hover
+				color: $accent2
+				border-bottom: 1px solid $accent2
+
