--- a/youbor/assets/sass/main.sass
+++ b/youbor/assets/sass/main.sass
@@ -383,7 +383,8 @@
 
 		+r(767)
 			padding-top: 150px
-			height: 100vh
+			// height: 100vh
+			height: 450px
 
 		&--1
 			// background: url(../img/hero_1.png)
@@ -1857,4 +1858,5 @@
 			&:hover
 				color: $accent2
 				border-bottom: 1px solid $accent2
+
 
