product in work

--- a/youbor/assets/sass/main.sass
+++ b/youbor/assets/sass/main.sass
@@ -773,18 +773,28 @@
 //---------------------bloger----------------------
 .person
 	margin-bottom: 60px
+	width: 100%
+	background: $light
+	border-radius: 5px
+	padding: 50px 65px
+	display: flex
+	align-items: center
+	gap: 110px
 
 	+r(576)
 		margin-bottom: 30px
 
+	&__container
+		padding-top: 30px
+
 	&__wrap
-		width: 100%
-		background: $light
-		border-radius: 5px
-		padding: 50px 65px
-		display: flex
-		align-items: center
-		gap: 110px
+		// width: 100%
+		// background: $light
+		// border-radius: 5px
+		// padding: 50px 65px
+		// display: flex
+		// align-items: center
+		// gap: 110px
 
 		+r(992)
 			gap: 30px
