--- a/youbor/assets/sass/main.sass
+++ b/youbor/assets/sass/main.sass
@@ -347,8 +347,11 @@
 
 	&__btn
 		background: $accent2
+		border-color: $accent2
+		min-width: 135px
 
 		+r(480)
+			min-width: none
 			max-width: 100px
 			font-size: 14px
 			height: 40px
@@ -356,6 +359,42 @@
 		&:hover
 			background: $accent
 			border-color: $accent
+
+		&.hidden
+			display: none
+
+
+
+	&__auth
+		position: relative
+
+		&:hover
+			.header__auth_submenu
+				opacity: 1
+				visibility: visible
+
+		&_submenu
+			position: absolute
+			background: #fff
+			border-radius: 5px
+			visibility: hidden
+			opacity: 0
+			padding: 10px
+			box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2)
+			min-width: 135px
+			+transition
+
+			+r(480)
+				min-width: none
+
+			li
+
+				a
+					color: $dark
+					font-size: 14px
+
+					&:hover
+						color: $accent
 
 	&__profile
 		@extend .header__lang
@@ -457,6 +496,12 @@
 
 	&__btn
 		min-width: 135px
+		background: $accent2
+		border-color: $accent2
+
+		&:hover
+			background: $accent
+			border-color: $accent
 
 .celeb
 	padding-bottom: 70px
