--- a/youbor/assets/sass/main.sass
+++ b/youbor/assets/sass/main.sass
@@ -2036,6 +2036,25 @@
 			&.color--2
 				background: linear-gradient(115.95deg, rgba(239, 239, 239, 0.294) 10.92%, rgba(255, 255, 255, 0.0392) 96.4%)
 				backdrop-filter: blur(65.9315px)
+
+.checkout
+
+	&__wrap
+
+	&__content
+
+		.woocommerce-billing-fields
+			max-width: 700px
+			margin: 0 auto
+			padding: 50px
+			background: $light
+			border-radius: 5px
+			color: $dark
+
+			.input-text
+				@extend .form__input
+				background: #fff
+
 //-------------------------WOOCOMMERCE------------
 .woocommerce
 	width: 100%
