--- a/youbor/assets/sass/main.sass
+++ b/youbor/assets/sass/main.sass
@@ -2051,9 +2051,89 @@
 			border-radius: 5px
 			color: $dark
 
+
+
 			.input-text
 				@extend .form__input
 				background: #fff
+
+			#billing_destination_field,
+			#billing_language_field
+
+				fieldset
+					display: flex
+					align-items: center
+					justify-content: center
+					gap: 50px
+					text-align: center
+					width: 100%
+
+				legend
+					margin-bottom: 35px
+
+				label
+					position: relative
+
+					&:hover
+						cursor: pointer
+
+					&::before
+						content: ''
+						position: absolute
+						width: 30px
+						height: 30px
+						background: #000
+						top: -25px
+						left: calc( 50% - 15px )
+
+					&.radio-active
+						&::before
+							background: #c4c4c4
+
+					input[type="radio"]
+						display: none
+
+			#billing_reason_field
+
+				fieldset
+					display: grid
+					grid-template-columns: 1fr 1fr 1fr 1fr
+					gap: 20px
+					text-align: center
+
+				abbr
+					visibility: hidden
+
+				legend
+					margin-bottom: 35px
+
+				label
+					position: relative
+
+					&:hover
+						cursor: pointer
+
+					&::before
+						content: ''
+						position: absolute
+						width: 30px
+						height: 30px
+						background: #000
+						top: -25px
+						left: calc( 50% - 15px )
+
+					&.radio-active
+						&::before
+							background: #c4c4c4
+
+					input[type="radio"]
+						display: none
+
+			#billing_comment_field
+
+				textarea
+					resize: none
+					height: 150px
 
 //-------------------------WOOCOMMERCE------------
 .woocommerce
