--- a/youbor/assets/sass/main.sass
+++ b/youbor/assets/sass/main.sass
@@ -996,6 +996,7 @@
 		iframe
 			width: 100%
 			height: 100%
+
 .other
 	padding-bottom: 80px
 
@@ -2090,7 +2091,7 @@
 					width: 100%
 
 				legend
-					margin-bottom: 35px
+					margin-bottom: 55px
 
 				label
 					position: relative
@@ -2098,35 +2099,114 @@
 					&:hover
 						cursor: pointer
 
-					&::before
-						content: ''
-						position: absolute
-						width: 30px
-						height: 30px
-						background: #000
-						top: -25px
-						left: calc( 50% - 15px )
+					// &::before
+					// 	content: ''
+					// 	position: absolute
+					// 	width: 30px
+					// 	height: 30px
+					// 	top: -25px
+					// 	left: calc( 50% - 15px )
 
 					&.radio-active
 						&::before
-							background: #c4c4c4
+							background: $accent
+							color: #fff
+							border-color: #fff
 
 					input[type="radio"]
 						display: none
+
+			#billing_language_field
+
+				label
+
+					&::before
+						position: absolute
+						width: 50px
+						height: 50px
+						top: -50px
+						border: 1px solid $dark
+						border-radius: 100%
+						left: calc( 50% - 25px )
+						font-weight: 700
+						display: flex
+						align-items: center
+						justify-content: center
+
+					&:nth-of-type(1)
+
+						&::before
+							content: 'RU'
+					
+					&:nth-of-type(2)
+
+						&::before
+							content: 'UZ'
+
+			#billing_destination_field
+
+				label
+
+					&::before
+						content: ''
+						position: absolute
+						width: 50px
+						height: 50px
+						background-color: #fff
+						border-radius: 100%
+						border: 1px solid $dark
+						top: -50px
+						left: calc( 50% - 25px )
+
+					&:nth-of-type(1)
+
+						&::before
+							background: url(../img/other.svg)
+							background-size: 60%
+							background-position: center
+							background-repeat: no-repeat
+
+						
+						&.radio-active
+							&::before
+								background: url(../img/other_white.svg)
+								background-size: 60%
+								background-position: center
+								background-repeat: no-repeat
+								background-color: $accent
+								border: 1px solid #fff
+					
+					&:nth-of-type(2)
+
+						&::before
+							background: url(../img/me.svg)
+							background-size: 60%
+							background-position: center
+							background-repeat: no-repeat
+						
+						&.radio-active
+							&::before
+								background: url(../img/me_white.svg)
+								background-size: 60%
+								background-position: center
+								background-repeat: no-repeat
+								background-color: $accent
+								border: 1px solid #fff
+
 
 			#billing_reason_field
 
 				fieldset
 					display: grid
 					grid-template-columns: 1fr 1fr 1fr 1fr
-					gap: 20px
+					gap: 45px
 					text-align: center
 
 				abbr
 					visibility: hidden
 
 				legend
-					margin-bottom: 35px
+					margin-bottom: 55px
 
 				label
 					position: relative
@@ -2137,15 +2217,145 @@
 					&::before
 						content: ''
 						position: absolute
-						width: 30px
-						height: 30px
-						background: #000
-						top: -25px
-						left: calc( 50% - 15px )
+						width: 50px
+						height: 50px
+						background-color: #fff
+						border-radius: 100%
+						top: -50px
+						left: calc( 50% - 25px )
 
-					&.radio-active
+					&:nth-of-type(1)
+
 						&::before
-							background: #c4c4c4
+							background: url(../img/reason_1.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_1_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(2)
+
+						&::before
+							background: url(../img/reason_2.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_2_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(3)
+
+						&::before
+							background: url(../img/reason_3.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_3_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(4)
+
+						&::before
+							background: url(../img/reason_4.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_4_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(5)
+
+						&::before
+							background: url(../img/reason_5.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_5_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(6)
+
+						&::before
+							background: url(../img/reason_6.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_6_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(7)
+
+						&::before
+							background: url(../img/reason_7.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_7_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(8)
+
+						&::before
+							background: url(../img/reason_8.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_8_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(9)
+
+						&::before
+							background: url(../img/reason_9.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_9_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(10)
+
+						&::before
+							background: url(../img/reason_10.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_10_white.svg)
+								background-size: cover
+								background-color: $accent
+					
+					&:nth-of-type(11)
+
+						&::before
+							background: url(../img/reason_11.svg)
+							background-size: cover
+						
+						&.radio-active
+							&::before
+								background: url(../img/reason_11_white.svg)
+								background-size: cover
+								background-color: $accent
+								
 
 					input[type="radio"]
 						display: none
